Fix bug, increase z-index of InformToast

--- a/src/components/InformToast/InformToast.module.scss
+++ b/src/components/InformToast/InformToast.module.scss
@@ -4,6 +4,7 @@
   left: 50%;
   bottom: 5vh;
   transform: translateX(-50%);
+  z-index: 100;
 
   @media screen and (min-width: 576px) {
     left: auto;
